# RAG_learn

./: .env  1.py  2_chunk_summary.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss_index  matedata_pkl  metadata.pkl
notebook/: 1-langchain-document-components.svg.url  document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
